kubernetes/apps/networking/wireguard-gateway/ccnp.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.freckle.systems/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
# Allow WireGuard ingress from atlantis site public IPs.
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: wireguard-gateway-ingress
spec:
  nodeSelector: {}
  enableDefaultDeny:
    ingress: false
  ingress:
    - fromCIDRSet:
        - cidrGroupRef: site-atlantis-public
      toPorts:
        - ports:
            - port: "57381"
              protocol: UDP
